# hog-parallel

./: CMakeLists.txt  LICENSE  README.md
include/: Common.h  HistogramOfOrientedGradients.h  Operations.h  PPMImage.h  QPCounter.h
resources/: gentleman.ppm  lenna.ppm  woman.ppm
src/: HistogramOfOrientedGradients.cpp  Operations.cpp  PPMImage.cpp  QPCounter.cpp  main.cpp
